[package]
name = "dominant_color_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominant_color = "0.3.0"
image = { version = "0.23.0", features = ["jpeg"] }
reqwest = { version = "0.11.9", features = ["blocking"]}
